--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -14,6 +13,112 @@
 
     <com.carl.customview.view.LoadingView
         android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
+    <com.carl.customview.view.RCRelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        app:round_corner="30dp"
+        app:round_corner_top_left="0dp"
+        app:stroke_color="#E39E83"
+        app:stroke_width="2dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="click"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test" />
+
+    </com.carl.customview.view.RCRelativeLayout>
+
+    <com.carl.customview.view.RCRelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        app:round_corner="30dp"
+        app:round_corner_top_right="0dp"
+        app:stroke_color="#E39E83"
+        app:stroke_width="2dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="click"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test" />
+
+    </com.carl.customview.view.RCRelativeLayout>
+
+    <com.carl.customview.view.RCRelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        app:round_corner="30dp"
+        app:round_corner_bottom_left="0dp"
+        app:stroke_color="#E39E83"
+        app:stroke_width="2dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="click"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test" />
+
+    </com.carl.customview.view.RCRelativeLayout>
+
+    <com.carl.customview.view.RCRelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:round_corner="30dp"
+        app:round_corner_bottom_right="0dp"
+        app:stroke_color="#E39E83"
+        app:stroke_width="2dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="click"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test" />
+
+    </com.carl.customview.view.RCRelativeLayout>
+
+    <com.carl.customview.view.RCRelativeLayout
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         android:layout_centerInParent="true"
-        android:layout_height="100dp" />
+        android:padding="10dp"
+        app:round_as_circle="true"
+        app:round_corner="30dp"
+        app:round_corner_bottom_right="0dp"
+        app:stroke_color="#E39E83"
+        app:stroke_width="4dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="click"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_alignParentBottom="true"
+            android:background="#995F5652"
+            android:gravity="center_horizontal"
+            android:text="害怕.png"
+            android:textColor="#fff"
+            android:textSize="24sp" />
+
+    </com.carl.customview.view.RCRelativeLayout>
 </RelativeLayout>
